# python-project-50

./: .gitignore  Makefile  README.md  TEST.py  TEST_2.py  demo.cast_1  demo.cast_2  demo.cast_3  demo.cast_4  demo.cast_5  pyproject.toml  setup.cfg
.github/workflows/: check_test.yml  gendiff-flow.yml  hexlet-check.yml  main.yml
gendiff/: __init__.py  argparse.py  cli.py  data.py  dicts_diff.py  diff_with_formatter.py  gasket.py  gendiff.py  generate_diff.py  input_parser.py  open_file.py  parse_file.py  parser.py  tree.py
gendiff/Formatters/: format_diff.py  stylish.py
gendiff/formaters/: __init__.py  json.py  plain.py  stylish.py
gendiff/formatters/: format_diff.py  json_f.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py  main.py
tests/: __init__.py  test_generate_diff.py
tests/tests/: test_argparse.py  test_json_f.py  test_stylish.py
